--- a/project2/package.json
+++ b/project2/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^3.0.3",
     "mongoose": "^8.19.3",
     "next": "16.0.1",
+    "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
