--- a/project2/package.json
+++ b/project2/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "mongoose": "^8.19.3",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
