--- a/project2/package.json
+++ b/project2/package.json
@@ -13,7 +13,7 @@
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "mongoose": "^8.19.3",
-    "next": "16.0.1",
+    "next": "^15.0.3",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
